src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__ret_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
  2  lnil r0
  3  ret
