src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__ret_val.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
return 0


OK
.fn @main
  params 0
  stack 1
  .code
  0  lsmi r0, 0
  1  ret
