src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__str.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
"test"

OK
.fn @main
  params 0
  stack 1
  .code
  0  lstr r0, "test"
  1  ret
