src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__table_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
{}
}

OK
.fn @main
  params 0
  stack 1
  .code
  0  ltable r0, 0
  1  ret
