src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__table_non_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 2
  .code
  0  ltable r0, 3
  1  lsmi r1, 0
  2  skeyc r0, a, r1
  3  lsmi r1, 1
  4  skeyc r0, b, r1
  5  lsmi r1, 2
  6  skeyc r0, c, r1
  7  ret
