src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__var_assign_op.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 0
a += 1
a -= 1
a *= 1
a /= 1
}

OK
.fn @main
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 0
  1  add r1, r1, 1
  2  sub r1, r1, 1
  3  mul r1, r1, 1
  4  div r1, r1, 1
  5  lnil r0
  6  ret
