src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__variable_assignment.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let a = 1
a = 2


OK
.fn @main
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 1
  1  lsmi r1, 2
  2  lnil r0
  3  ret
