src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__variable_assignment_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
a = 2
}

ERROR
could not resolve name
2 |  a = 2
  |  ^
