src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__variable_scope_assignment_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
  let a = 1
}
a = 2

ERROR
could not resolve name
4 |  a = 2
  |  ^
